--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -1,19 +1,20 @@
 # Use postgres/example user/password credentials
-version: '3.1'
-
 services:
 
   db:
-   image: postgres
-   restart: always
-   ports:
-     - "5432:5432"
-   environment:
-    POSTGRES_PASSWORD: myPassword
-
+    image: postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - 5432:5432
 
   adminer:
-   image: adminer
-   restart: always
-   ports:
-   - "8082:8082"
+    image: adminer
+    restart: unless-stopped
+    ports:
+      - 8080:8080
+
+
